styles.css
@font-face {
    font-family: michroma;
    src: url(webfontkit-20220722-063921/michroma-regular-webfont.woff);
}

* {
  box-sizing: border-box;
}

 body {
    margin: 0; 
    padding: 0;
    border: 0;
    min-height: 100%;
    min-width: 100%;
    -webkit-appearance: none;
    appearance:none;
}

.container {
    position:relative;
  min-height: 100vh;
  min-width: 100%;
  display: grid;
  grid-template-columns: 1fr 2.5fr;
  grid-template-rows: 2fr 1fr 1fr 1fr;
}


img {
    grid-row: 1 / 5;
    width:150%;
    background-size: cover;
    background-color: black;
}


.logo {
    position: absolute;
    color: black;
    background-image: url( 'rocket.svg' );
    left: 0;  
    top: 40%;
    width: 28.6%;
    height: 20%;
    background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255,255,255,.5));
    display:flex;
  justify-content: center;
  align-items: center;
  flex-wrap: no-wrap;
    line-height: 1;
   
    font-family: michroma, sans-serif;
    font-weight: bold;
    font-size: 25px;
    font-style: oblique;
   
}

.material-symbols-outlined {
    font-size: 45px;
  
}


.intro {
    grid-column: 2;
    grid-row: 1;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-weight: bold;
   background-color: whitesmoke;
   padding-left: 2em;   
   padding-right:5em;
   padding-top: 4em;
}


.form {
    grid-column: 2;
    grid-row: 2 /4;
    background-color: white;
    
}



input {
    display: inline-block;
    width: 11em;
  }
  
  input:not(:placeholder-shown):not(:focus):invalid {
    border: 2px solid red;
    background-color: rgb(240, 204, 204);
  }



  label {
    font-size: x-small;
    font-weight:400;
    display: inline-block;
    width: 9em;
    padding: 2em;
    margin-left: 15em;
  }



.submit {
    grid-column:2;
    grid-row: 4;
    display:inline-block;
    background-color: whitesmoke;
    padding-left: 2em;
    padding-top:1em;
   
}

.caption {
    position: absolute;
    bottom: 8px;
    left: 70px;
    font-size: x-small;
    color:white;
    }


    .help {
       
        font-size: x-small;
        position:absolute;
        right:15em;
        
    }

    button {
        padding:15px; 
        margin-top: 1.5em;
        margin-left: 295px;
        background:rgb(0,181,226); 
        color: black;
        border:0 none;
        cursor:pointer;
        border-radius: 5px; 
}

button:focus {
    background:rgb(60, 0, 226); 
    color:white;
    padding:18px;
}

